# weave-patch-mcp

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: bump-version.yml  ci-cd.yml  codeql.yml  release.yml
npm/: README.md  package.json
npm/scripts/: install.js
src/: applier.rs  error.rs  lib.rs  main.rs  parser.rs  patch_exec_description.txt  patch_utils.rs  reader.rs  server.rs  tool_contract.rs  validator.rs
tests/: integration_test.rs  server_test.rs  validator_test.rs
tests/fixtures/: invalid.go  invalid.json  invalid.py  invalid.rs
